--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
-babel
+alembic==1.5.5
+autopep8==1.5.5
+Babel==2.9.0
+Flask==1.1.2
+Flask-Migrate==2.7.0
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+Mako==1.1.4
+psutil==5.8.0
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
+psycopg2-pool==1.1
 python-dateutil==2.6.0
-flask-moment
-flask-wtf
+requests==2.25.1
+SQLAlchemy==1.3.23
+virtualenv==20.4.2
+WTForms==2.3.3
